--- a/source_code/ids-server/Views/Shared/_Nav.cshtml
+++ b/source_code/ids-server/Views/Shared/_Nav.cshtml
@@ -15,18 +15,28 @@
             Duende IdentityServer
         </a>
 
-        @if (!string.IsNullOrWhiteSpace(name))
-        {
-            <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto">
+            @if (!string.IsNullOrWhiteSpace(name))
+            {
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">@name <b class="caret"></b></a>
-                    
+
                     <div class="dropdown-menu">
+                        <a class="dropdown-item" asp-action="Profile" asp-controller="User">My Profile</a>
                         <a class="dropdown-item" asp-action="Logout" asp-controller="Account">Logout</a>
                     </div>
-              </li>
-            </ul>
-        }
-    
+                </li>
+            }
+            else
+            {
+                <li class="nav-item">
+                    <a class="nav-link" id="register" asp-action="Register" asp-controller="Account">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="login" asp-action="Login" asp-controller="Account">Login</a>
+                </li>
+            }
+        </ul>
+
     </nav>
 </div>
