--- a/source_code/ids-server/ClientApp/src/app/mfa/mfa.component.html
+++ b/source_code/ids-server/ClientApp/src/app/mfa/mfa.component.html
@@ -2,30 +2,42 @@
 <div class="min-h-screen flex flex-col items-center justify-center bg-gray-300">
   <div class="flex flex-col bg-white shadow-md px-4 sm:px-6 md:px-8 lg:px-10 py-8 rounded-md w-full max-w-md">
     <div class="font-medium self-center text-xl sm:text-2xl uppercase text-gray-800">Login with MFA</div>
+    <div class="relative mt-10  bg-gray-300" *ngIf="error">
+      <div class="absolute left-0 top-0 flex justify-center w-full -mt-2">
+        <span class="bg-white px-4 text-xs text-red-500">{{ error }}</span>
+      </div>
+    </div>
     <div class="mt-10">
-      <form action="#">
+      <form (ngSubmit)="login()">
         <div class="flex flex-col mb-6">
           <div class="relative">
             <div class="inline-flex items-center justify-center absolute left-0 top-0 h-full w-10 text-gray-400">
-              <svg class="h-6 w-6" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-                <path d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207" />
+              <svg class="h-6 w-6" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                viewBox="0 0 24 24" stroke="currentColor">
+                <path
+                  d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207" />
               </svg>
             </div>
 
-            <input id="email" type="email" name="email" class="text-sm sm:text-base placeholder-gray-500 pl-10 pr-4 rounded-lg border border-gray-400 w-full py-2 focus:outline-none focus:border-blue-400" placeholder="Authenticator Code" />
+            <input [(ngModel)]="twoFactorCode" id="email" type="email" name="email"
+              class="text-sm sm:text-base placeholder-gray-500 pl-10 pr-4 rounded-lg border border-gray-400 w-full py-2 focus:outline-none focus:border-blue-400"
+              placeholder="Authenticator Code" />
           </div>
         </div>
         <div class="flex items-center mb-6 -mt-4">
           <div class="flex ml-auto">
-            <a href="#" class="inline-flex text-xs sm:text-sm text-blue-500 hover:text-blue-700">Haven't got your phone with you?</a>
+            <a href="#" class="inline-flex text-xs sm:text-sm text-blue-500 hover:text-blue-700">Haven't got your phone
+              with you?</a>
           </div>
         </div>
 
         <div class="flex w-full">
-          <button type="submit" class="flex items-center justify-center focus:outline-none text-white text-sm sm:text-base bg-blue-600 hover:bg-blue-700 rounded py-2 w-full transition duration-150 ease-in">
+          <button type="submit"
+            class="flex items-center justify-center focus:outline-none text-white text-sm sm:text-base bg-blue-600 hover:bg-blue-700 rounded py-2 w-full transition duration-150 ease-in">
             <span class="mr-2 uppercase">Login</span>
             <span>
-              <svg class="h-6 w-6" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+              <svg class="h-6 w-6" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                viewBox="0 0 24 24" stroke="currentColor">
                 <path d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
               </svg>
             </span>
@@ -34,9 +46,11 @@
       </form>
     </div>
     <div class="flex justify-center items-center mt-6">
-      <a href="#" target="_blank" class="inline-flex items-center font-bold text-blue-500 hover:text-blue-700 text-xs text-center">
+      <a href="#" target="_blank"
+        class="inline-flex items-center font-bold text-blue-500 hover:text-blue-700 text-xs text-center">
         <span>
-          <svg class="h-6 w-6" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+          <svg class="h-6 w-6" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            viewBox="0 0 24 24" stroke="currentColor">
             <path d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z" />
           </svg>
         </span>
