--- a/source_code/ids-server/ClientApp/src/app/login/login.component.html
+++ b/source_code/ids-server/ClientApp/src/app/login/login.component.html
@@ -2,14 +2,9 @@
 <div class="min-h-screen flex flex-col items-center justify-center bg-gray-300">
   <div class="flex flex-col bg-white shadow-md px-4 sm:px-6 md:px-8 lg:px-10 py-8 rounded-md w-full max-w-md">
     <div class="font-medium self-center text-xl sm:text-2xl uppercase text-gray-800">Login</div>
-    <button class="relative mt-6 border rounded-md py-2 text-sm text-gray-800 bg-gray-100 hover:bg-gray-200">
-      <span class="absolute left-0 top-0 flex items-center justify-center h-full w-10 text-blue-500"><i
-          class="fab fa-facebook-f"></i></span>
-      <span>Login with Facebook</span>
-    </button>
     <div class="relative mt-10 h-px bg-gray-300">
       <div class="absolute left-0 top-0 flex justify-center w-full -mt-2">
-        <span class="bg-white px-4 text-xs text-gray-500 uppercase">Or Login With Email</span>
+        <span class="bg-white px-4 text-xs text-gray-500 uppercase">Login With Email</span>
       </div>
     </div>
     <div class="relative mt-10  bg-gray-300" *ngIf="error">
@@ -76,16 +71,6 @@
       </form>
     </div>
     <div class="flex justify-center items-center mt-6">
-      <a href="#" target="_blank"
-        class="inline-flex items-center font-bold text-blue-500 hover:text-blue-700 text-xs text-center">
-        <span>
-          <svg class="h-6 w-6" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            viewBox="0 0 24 24" stroke="currentColor">
-            <path d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z" />
-          </svg>
-        </span>
-        <span class="ml-2">You don't have an account?</span>
-      </a>
     </div>
   </div>
 </div>
