--- a/source_code/ids-server/Views/Consent/Index.cshtml
+++ b/source_code/ids-server/Views/Consent/Index.cshtml
@@ -32,7 +32,7 @@
                                 Personal Information
                             </div>
                             <ul class="list-group list-group-flush">
-                                @foreach (var scope in Model.IdentityScopes)
+                                @foreach (ScopeViewModel scope in Model.IdentityScopes)
                                 {
                                     <partial name="_ScopeListItem" model="@scope" />
                                 }
@@ -50,7 +50,7 @@
                                 Application Access
                             </div>
                             <ul class="list-group list-group-flush">
-                                @foreach (var scope in Model.ApiScopes)
+                                @foreach (ScopeViewModel scope in Model.ApiScopes)
                                 {
                                     <partial name="_ScopeListItem" model="scope" />
                                 }
