--- a/source_code/ids-server/Views/Device/UserCodeConfirmation.cshtml
+++ b/source_code/ids-server/Views/Device/UserCodeConfirmation.cshtml
@@ -36,7 +36,7 @@
                                 Personal Information
                             </div>
                             <ul class="list-group list-group-flush">
-                                @foreach (var scope in Model.IdentityScopes)
+                                @foreach (ScopeViewModel scope in Model.IdentityScopes)
                                 {
                                     <partial name="_ScopeListItem" model="@scope" />
                                 }
@@ -54,7 +54,7 @@
                                 Application Access
                             </div>
                             <ul class="list-group list-group-flush">
-                                @foreach (var scope in Model.ApiScopes)
+                                @foreach (ScopeViewModel scope in Model.ApiScopes)
                                 {
                                     <partial name="_ScopeListItem" model="scope" />
                                 }
