--- a/source_code/ids-server/Views/Account/Login.cshtml
+++ b/source_code/ids-server/Views/Account/Login.cshtml
@@ -58,7 +58,7 @@
                     </div>
                     <div class="card-body">
                         <ul class="list-inline">
-                            @foreach (var provider in Model.VisibleExternalProviders)
+                            @foreach (ExternalProvider provider in Model.VisibleExternalProviders)
                             {
                                 <li class="list-inline-item">
                                     <a class="btn btn-secondary"
