--- a/source_code/ids-server/Views/Home/Index.cshtml
+++ b/source_code/ids-server/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 @using System.Reflection
 
 @{
-    var version = typeof(Duende.IdentityServer.Hosting.IdentityServerMiddleware).Assembly.GetCustomAttribute<AssemblyInformationalVersionAttribute>()?.InformationalVersion.Split('+').First();
+    string version = typeof(Duende.IdentityServer.Hosting.IdentityServerMiddleware).Assembly.GetCustomAttribute<AssemblyInformationalVersionAttribute>()?.InformationalVersion.Split('+').First();
 }
 
 <div class="welcome-page">
